--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ gunicorn==20.1.0
 idna==3.3
 packaging==21.0
 Pillow==8.1.0
+psycopg2==2.9.3
 pyparsing==3.0.1
 python-decouple==3.5
 python-magic==0.4.24
